desktop header and sidebar

--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="es" class="cgp-pc cgp-landscape cgp-low-height cgp-not-mobile-os cgp-windows cgp-gib promotions-lobby">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="" />
-    <link type="image/x-icon" rel="icon" href="/src/assets/img/favicon.png">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons&amp;display=block" crossorigin="">
+    <link type="image/x-icon" rel="icon" href="/src/assets/img/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="Juegos anónimos, retiros y depósitos instantáneos, y generosas bonificaciones | Betpanda.io ofrece una plataforma ilimitada y compatible con VPN para jugadores de criptomonedas." lang="es" data-react-helmet="true">
+    <meta name="description" content="888casino es el principal casino online con varios galardones, desde 1997. Con 25 millones de socios y más de 280 selectos juegos, no te lo puedes perder." lang="es" data-react-helmet="true">
     <title></title>
   </head>
   <body>
