--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="es" class="cgp-pc cgp-landscape cgp-low-height cgp-not-mobile-os cgp-windows cgp-gib promotions-lobby">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="" />
